[gd_scene load_steps=17 format=3 uid="uid://d0k5mnbjggsxq"]

[ext_resource type="PackedScene" uid="uid://cu2l7rfmj5aeb" path="res://scenes/moveable.tscn" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://b4pvms8nymcbx" path="res://scripts/player.gd" id="1_qlg0r"]
[ext_resource type="PackedScene" uid="uid://hddpb5jaa5nw" path="res://scenes/animated_character.tscn" id="2_g2els"]
[ext_resource type="Texture2D" uid="uid://bas4y1p0spcfq" path="res://assets/player.png" id="3_dqkch"]
[ext_resource type="PackedScene" uid="uid://blnospp0aw84v" path="res://scenes/healthbox.tscn" id="3_qhqgy"]
[ext_resource type="Shader" uid="uid://cmoetrnigluwh" path="res://shaders/white.gdshader" id="5_y4r1p"]
[ext_resource type="Texture2D" uid="uid://rkqhdehta3av" path="res://assets/player_weak.png" id="6_3v2ag"]
[ext_resource type="PackedScene" uid="uid://bgp7fiqs72dqk" path="res://scenes/dust_particle.tscn" id="6_tuyoq"]
[ext_resource type="PackedScene" uid="uid://c47821j3o5p7c" path="res://scenes/spawner.tscn" id="7_fjrip"]
[ext_resource type="PackedScene" uid="uid://c26lri35mtwbc" path="res://scenes/dash_ghost.tscn" id="8_smehm"]
[ext_resource type="PackedScene" uid="uid://dx137s8qt5iyj" path="res://scenes/dash_particle.tscn" id="9_ur7pv"]
[ext_resource type="PackedScene" uid="uid://cyi562wnh0tgw" path="res://scenes/damagebox.tscn" id="12_3v2ag"]
[ext_resource type="PackedScene" uid="uid://bchxpso63646" path="res://scenes/pistol.tscn" id="13_jej6c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2wvv"]
resource_local_to_scene = true
shader = ExtResource("5_y4r1p")
shader_parameter/active = false
shader_parameter/alpha = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 3.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4r1p"]
radius = 3.0
height = 14.0

[node name="player" type="Node2D" node_paths=PackedStringArray("moveable", "animated_character", "dust_particle", "spawner", "dash_particle", "healthbox")]
z_index = 10
script = ExtResource("1_qlg0r")
moveable = NodePath("moveable")
animated_character = NodePath("animated_character")
dust_particle = NodePath("dust_particle")
spawner = NodePath("spawner")
dash_particle = NodePath("dash_particle")
healthbox = NodePath("healthbox")
normal_texture = ExtResource("3_dqkch")
weak_texture = ExtResource("6_3v2ag")
guns = Array[PackedScene]([ExtResource("13_jej6c")])

[node name="dust_particle" parent="." instance=ExtResource("6_tuyoq")]
position = Vector2(0, 6)
amount = 3
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
damping_min = 5.0
damping_max = 5.0
scale_amount_max = 3.0

[node name="dash_particle" parent="." instance=ExtResource("9_ur7pv")]

[node name="animated_character" parent="." node_paths=PackedStringArray("moveable") instance=ExtResource("2_g2els")]
material = SubResource("ShaderMaterial_d2wvv")
texture = ExtResource("3_dqkch")
moveable = NodePath("../moveable")

[node name="moveable" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("1_3vyb7")]
collision_mask = 18
entity = NodePath("..")
speed = 125.0
accel = 15.0
friction = 15.0
dash_speed = 500.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="moveable"]
shape = SubResource("CapsuleShape2D_dqkch")

[node name="healthbox" parent="." node_paths=PackedStringArray("entity", "moveable", "sprite") instance=ExtResource("3_qhqgy")]
collision_layer = 0
collision_mask = 8
entity = NodePath("..")
moveable = NodePath("../moveable")
sprite = NodePath("../animated_character")
knockback_mul = 10.0
max_health = 10.0
health = 10.0
screenshake_hit = 5.0
screenshake_duration = 0.2
frame_freeze_duration = 0.2
die_effect_mul = 2.0
particle_scale = 0.5
hit_particle_scale = 0.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="healthbox"]
shape = SubResource("CapsuleShape2D_y4r1p")

[node name="spawner" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("7_fjrip")]
entity = NodePath("..")
obj = ExtResource("8_smehm")

[node name="spawn_dash_ghost" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="damagebox" parent="." instance=ExtResource("12_3v2ag")]
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="damagebox"]
shape = SubResource("CapsuleShape2D_y4r1p")

[node name="dash_regen" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="dash_regen" to="." method="_on_dash_regen_timeout"]
